# tacos

./: README.md  ontology.json  pyproject.toml  requirements.txt
prompts/: clean_strong_annotations  merge_strong_annotations
src/: predict.py  retrieval_module.py  supervised_module.py  train.py
src/datasets/: aac_wrapper.py  audio_loading.py  audioset.py  dataset.py  tacos.py
src/models/: prediction_wrapper.py  sed.py
src/tacos/: predict.py  retrieval_module.py  supervised_module.py  train.py
src/tacos/datasets/: aac_wrapper.py  audio_loading.py  audioset.py  batch_collate.py  dataset.py  download_datasets.py  tacos.py  utils.py
src/tacos/models/: prediction_wrapper.py  sed.py  wrapper.py
src/tacos/models/asit/: ASIT_wrapper.py  vision_transformer.py
